# PyQuickTool

./: .ctags  .flake8  .quickpytemplate  LICENSE  MANIFEST.in  README.md  TODO  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py
pyquicktools/: __init__.py  cli.py  utils.py
pyquicktools/pyquickcli/: pyquickcli.py
pyquicktools/pyquicktemplate/: .default-quickpytemplate  cli.py  library.py  module.py  package.py  utils.py
pyquicktools/pyquicktest/: assertions.py  cli.py  decorators.py  gen.py  rewrite.py  test.py  utils.py
pyquicktools/uutils/: __init__.py
src/pyquicktools/: __init__.py  cli.py  utils.py
src/pyquicktools/pyquicktemplate/: .default-quickpytemplate  cli.py  module.py  package.py  utils.py
src/pyquicktools/uutils/: uutils.py
tests/: tests_pqt.py  tests_pqt2.py
