[build-system]
requires        = ["setuptools>=61.0"]
build-backend   = "setuptools.build_meta"

[project]
name            = "PyQuickTools"
version         = "0.0.1"
authors         = [
  {name="Quentin Raimbaud"},
]
license         = {file = "LICENCE"}
description     = "Quickly applicable Python tools for everyday use"
readme          = "README.md"
requires-python = ">=3.9"
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]
dependencies    = [
    "typing",
    "colorama"
]

[project.urls]
homepage        = "https://example.com"
documentation   = "https://readthedocs.org"
repository      = "https://github.com"
changelog       = "https://github.com/me/spam/blob/master/CHANGELOG.md"