[build-system]
requires        = ["setuptools>=61.0"]
build-backend   = "setuptools.build_meta"

[project]
name            = "PyQuickTools"
version         = "0.1.0"
authors         = [
  {name="Quentin Raimbaud"},
]
license         = {file = "LICENSE"}
description     = "PyQuickTools provides quick-to-use tools for Python developers."
readme          = "README.md"
requires-python = ">=3.9"
classifiers     = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
        "Topic :: Software Development :: Libraries"
]
dependencies    = [
  "setuptools>=61.0",
  "colorama"
]
keywords        = [
  "pyquicktools",
  "python",
  "quick",
  "tools",
  "template",
  "test",
  "cli"
]

[project.urls]
homepage        = "https://example.com"
documentation   = "https://readthedocs.org"
repository      = "https://github.com"
changelog       = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
pqt = "pyquicktools.cli:main"